Fixed background covering and code cleanup

--- a/src/app/games/connect4/connect4.css
+++ b/src/app/games/connect4/connect4.css
@@ -25,7 +25,7 @@ section {
     margin-left: 100px;
     margin-top: 50px;
     background-color: #8294C4;
-    border: 0px transparent;
+    border: 0 transparent;
     border-radius: 10px;
     cursor: pointer;
 }
@@ -67,7 +67,7 @@ p {
 .dot {
     width: 5px;
     height: 5px;
-    border: 0px transparent;
+    border: 0 transparent;
     border-radius: 5px;
     background-color: #dbdfea;
     position: absolute;
@@ -78,9 +78,8 @@ p {
 .piece-place {
     width: 954px;
     height: 90px;
-    margin: auto;
-    margin-top: 30px;
-    margin-bottom: 10px;
+    margin: 0 auto 10px;
+    padding-top: 16px;
     display: flex;
 }
 
@@ -88,16 +87,15 @@ p {
     width: 10px;
     height: 10px;
     background-color: #ACB1D6;
-    border: 0px solid transparent;
+    border: 0 solid transparent;
     border-radius: 10px;
-    margin: auto;
-    margin-top: 40px;
+    margin: 40px auto auto;
 }
 
 .circle-big {
     width: 90px;
     height: 90px;
-    border: 0px solid transparent;
+    border: 0 solid transparent;
     border-radius: 90px;
 }
 
@@ -109,7 +107,7 @@ p {
     width: 90px;
     height: 90px;
     background-color: #CD5D7D;
-    border: 0px solid transparent;
+    border: 0 solid transparent;
     border-radius: 90px;
 }
 
@@ -123,8 +121,7 @@ p {
     background-color: #8294C4;
     border: 1px solid transparent;
     border-radius: 30px;
-    margin: auto;
-    margin-top: 0px;
+    margin: 0 auto auto;
     display: flex;
 }
 
@@ -132,8 +129,7 @@ p {
     width: 1000px;
     height: 90px;
     border: 1px solid;
-    margin: auto;
-    margin-top: 30px;
+    margin: 30px auto auto;
     display: flex;
 }
 
